# Torn-Widget

./: README.md
.github/workflows/: main.yml
torn-status-widget/: Dockerfile  package-lock.json  package.json  vite.config.js
torn-status-widget/src/: index.html  main.js  styles.css
torn-status-widget/src-tauri/: 2  Cargo.toml  tauri.conf.json  torn-status-widget_0.1.0_x64_en-US.msi
torn-status-widget/src-tauri/capabilities/: default.json
torn-status-widget/src-tauri/src/: lib.rs  main.rs
