[package]
name = "torn-status-widget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "updater", "window-start-dragging", "window-show", "window-set-size", "window-set-position", "window-set-always-on-top", "window-hide", "window-close", "macos-private-api", "window-set-skip-taskbar", "shell-open", "fs-read-file", "fs-write-file", "fs-exists", "path-all", "dialog-message", "system-tray" ] }
window-vibrancy = "0.4.3" # Changed to a Tauri v1 compatible version

# Using the official tauri-plugin-autostart from the v1 branch of the plugins-workspace
# Explicitly specifying the package name within the workspace.
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", package = "tauri-plugin-autostart" }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]