[package]
name = "torn-status-widget"
version = "1.0.50"
description = "A Tauri App that displays Information from Torn API and creates notifications."
authors = ["GNSC4"]
license = ""
repository = ""
edition = "2021"
# MSRV updated to align with current Tauri v2 plugin ecosystem requirements.
rust-version = "1.77.2" # Ensure your Rust toolchain is at least this version

[build-dependencies]
# tauri-build version ~2.2.0 is compatible and recommended for Tauri 2.5.x.
tauri-build = { version = "~2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Using ~2.5.0 to allow for patch updates like 2.5.1.
tauri = { version = "~2.5.0", features = [
    "image-png",
    "image-ico",
    "macos-private-api",
    "tray-icon"
] }

image = { version = "0.25", features = ["png"] }

# Tauri Plugins
tauri-plugin-updater = { version = "~2.7.1" }
tauri-plugin-dialog = { version = "~2.2.2" }
tauri-plugin-fs = { version = "~2.3.0" }
tauri-plugin-shell = { version = "~2.2.1" }
tauri-plugin-autostart = { version = "~2.3.0" } 
tauri-plugin-store = { version = "~2.2.0" }  
tauri-plugin-notification = "2" # Corrected to an available version

window-vibrancy = "0.6.0" 
